<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, AndroidBuildingMusicPlayerActivity!</string>
    <string name="app_name">yaamp</string>
    <string name="enabled">Enabled</string>
    <string name="flat">Flat</string>
    <string name="bass_boost">Bass boost</string>
    <string name="about">About...</string>
    <string name="ok">OK</string>
    <string name="equoSetting">Equalizer</string>
    <string name="musicDetails">Details</string>
    <string name="copyright_message">Simple Equalizer v0.1a, Copyright \u00A92013 Kevin Boone. Feel free to distribute as you see fit.</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="search_setting">Search</string>
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Update music library</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
    <string name="enable_gesture_control">Enable gesture control</string>
    <string name="enable_gesture_control_summary">Control yaamp using simple gestures</string>
    <string name="pref_user_profile">Profile</string>
    <string name="pref_update_setting">yaamp Settings</string>
    <string name="title_activity_album_musics">AlbumMusics</string>
    <string name="action_settings">Settings</string>
     <string name="search_label">Search</string>
    <string name="search_hint">Search Names</string>
    <string name="scanLibrary">Scan library</string>

</resources>