<menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"/>
     <item
        android:id="@+id/equo_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/equoSetting"
        android:icon="@android:drawable/ic_menu_preferences"/>
      <item
        android:id="@+id/music_details"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/musicDetails"
        android:icon="@android:drawable/ic_menu_preferences"/>
      <item
        android:id="@+id/scan_musics"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/scanLibrary"
        android:icon="@android:drawable/ic_menu_preferences"/>
 
</menu>