<?xml version="1.0" encoding="utf-8"?>

<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center" 
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:background="@drawable/shape_selector"
    >


<CheckBox android:id="@+id/enabled"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/enabled"/>


<Button android:id="@+id/flat"
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
     android:text="@string/flat"
     />
<TextView  
    android:id="@+id/bass_boost_label"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/bass_boost"
    />
<SeekBar android:id="@+id/bass_boost"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="1000"
        android:progress="0"
        android:thumb="@drawable/thumb" 
        android:progressDrawable="@drawable/progress_drawable"
        android:secondaryProgress="0" />

<TextView  
    android:id="@+id/slider_label_1"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text=""
    />
<SeekBar android:id="@+id/slider_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="50"
        android:thumb="@drawable/thumb" 
        android:progressDrawable="@drawable/progress_drawable"
        android:secondaryProgress="50" />

<TextView  
    android:id="@+id/slider_label_2"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text=""
    />
<SeekBar android:id="@+id/slider_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="50"
        android:thumb="@drawable/thumb" 
        android:progressDrawable="@drawable/progress_drawable"
        android:secondaryProgress="50" />

<TextView  
    android:id="@+id/slider_label_3"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text=""
    />
<SeekBar android:id="@+id/slider_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="50"
        android:thumb="@drawable/thumb" 
        android:progressDrawable="@drawable/progress_drawable"
        android:secondaryProgress="50" />

<TextView  
    android:id="@+id/slider_label_4"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text=""
    />
<SeekBar android:id="@+id/slider_4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="50"
        android:thumb="@drawable/thumb" 
        android:progressDrawable="@drawable/progress_drawable"
        android:secondaryProgress="50" />

<TextView  
    android:id="@+id/slider_label_5"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text=""
    />
<SeekBar android:id="@+id/slider_5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="50"
        android:thumb="@drawable/thumb" 
        android:progressDrawable="@drawable/progress_drawable"
        android:secondaryProgress="50" />

<TextView  
    android:id="@+id/slider_label_6"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text=""
    />
<SeekBar android:id="@+id/slider_6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="50"
        android:thumb="@drawable/thumb" 
        android:progressDrawable="@drawable/progress_drawable"
        android:secondaryProgress="50" />

<TextView  
    android:id="@+id/slider_label_7"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text=""
    />
<SeekBar android:id="@+id/slider_7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="50"
        android:thumb="@drawable/thumb" 
        android:progressDrawable="@drawable/progress_drawable"
        android:secondaryProgress="50" />

<TextView  
    android:id="@+id/slider_label_8"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text=""
    />
<SeekBar android:id="@+id/slider_8"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="50"
        android:thumb="@drawable/thumb" 
        android:progressDrawable="@drawable/progress_drawable"
        android:secondaryProgress="50" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
</LinearLayout>

</LinearLayout>
